# nonebot_plugin_chatpdf

./: README.md  pyproject.toml
nonebot_plugin_chatpdf/: ChatSession.py  __init__.py  config.py  core.py
nonebot_plugin_chatpdf/gpt_reader/: paper.py  pdf_reader.py  prompt.py
